-> For #1847, support GDC case manifest TSVs in any column order, and only require Project and Case ID column -> For #1847, warn users that GDC case manifest TSVs only provide the current page of cases -> Fixed a typo in the Export Cohort dialog

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -281,7 +281,7 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <input type="submit" value="Exprt Cohort" class="btn btn-primary" />
+                        <input type="submit" value="Export Cohort" class="btn btn-primary" />
                         <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                         <div id="exporting-cohort" class="collapse" style="display: none;">
                             <i class="fa fa-circle-o-notch fa-spin"></i>  Exporting Cohort...
