--- a/blink_sass/pages/_page.sass
+++ b/blink_sass/pages/_page.sass
@@ -60,6 +60,25 @@
     a
       padding: 10px 9px
       display: block
+  .user-data-panel
+    .panel-body
+      overflow: hidden
+      position: relative
+      height: 110px
+    .spinner
+        position: absolute
+        width: 100%
+        height: 100%
+        top: 0px
+        left: 0px
+        background: rgba(0,0,0,.5)
+        z-index: 10
+        i
+            position: absolute
+            left: 45%
+            top: 15%
+            margin: auto
+            font-size: 75px
 
 .varfave-ver-display
   margin-top: 15px
