-> #2129: numerous changes to the site header and dashboard to reduce redundant queries

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -84,15 +84,15 @@
             <li class="menu-item has-drop-down">
                 <a>WORKBOOKS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    {% with user|get_workbooks_this_user as workbooks_this_user %}
-                        {% if workbooks_this_user|length > 0 %}
+                    {% with workbooks_this_user=user|get_workbooks_this_user user_workbook_count=user|get_workbooks_this_user|count %}
+                        {% if user_workbook_count > 0 %}
                         <li class="menu-item">
                             <strong>Recent</strong>
                             <ul class="item-list">
                                 {% for wlv in workbooks_this_user|slice:':5' %}
                                 <li class="menu-item" title="{{ wlv.name|wrap_text }}"><a class="inline-block" href="{% url 'workbook_detail' wlv.id %}">{{ wlv.name }}</a></li>
                                 {% endfor %}
-                                {% if workbooks_this_user|length > 5 %}
+                                {% if user_workbook_count > 5 %}
                                 <li class="menu-item has-drop-down__more"> More
                                     <ul class="drop">
                                         {% for wlv in workbooks_this_user|slice:'5:' %}
@@ -117,13 +117,14 @@
             </li>
             {% if USER_DATA_ON %}
             <li class="menu-item has-drop-down">
+                {% with user_programs=user|get_programs_this_user user_program_count=user|get_programs_this_user|count %}
                 <a>PROGRAMS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    {% if user|get_programs_this_user|length > 0 %}
+                    {% if user_program_count > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            {% for plv in user|get_programs_this_user|slice:':5' %}
+                            {% for plv in user_programs|slice:':5' %}
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_programs' %}" method="POST">
                                     {% csrf_token %}
@@ -132,10 +133,10 @@
                                 </form>
                             </li>
                             {% endfor %}
-                            {% if user|get_programs_this_user|length > 5 %}
+                            {% if user_program_count > 5 %}
                             <li class="menu-item has-drop-down__more"> More
                                 <ul class="drop">
-                                    {% for plv in user|get_programs_this_user|slice:'5:' %}
+                                    {% for plv in user_programs|slice:'5:' %}
                                     <li class="menu-item">
                                         <form action="{% url 'worksheet_create_with_programs' %}">
                                             {% csrf_token %}
@@ -154,6 +155,7 @@
                     <li class="menu-item"><a href="{% url 'program_upload' %}">Upload Program Data</a></li>
                     <li class="menu-item"><a href="{% url 'public_programs' %}">Public Program ( {% public_program_count %} )</a></li>
                 </ul>
+            {% endwith %}
             </li>
             {% endif %}
             <li class="menu-item has-drop-down">
@@ -217,13 +219,14 @@
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
+                {% with genefaves=user.genefavorite_set.all|active genefaves_count=user.genefavorite_set.all|active|count genefaves_sorted=user.genefavorite_set.all|active|dictsortreversed:'last_date_saved' %}
                 <a>GENES & miRNAs <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop genes-mirnas">
-                    {% if user.genefavorite_set.all|active|length > 0 %}
+                    {% if genefaves_count > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            {% for gflv in user.genefavorite_set.all|active|dictsortreversed:'last_date_saved'|slice:':5' %}
+                            {% for gflv in genefaves_sorted|slice:':5' %}
                             <li class="menu-item">
                                 <form action="{% url 'worksheet_create_with_genes' %}" method="POST">
                                     {% csrf_token %}
@@ -232,10 +235,10 @@
                                 </form>
                             </li>
                             {% endfor %}
-                            {% if user.genefavorite_set.all|active|length > 5 %}
+                            {% if genefaves_count > 5 %}
                             <li class="menu-item has-drop-down__more"> More
                                 <ul class="drop">
-                                    {% for gflv in user.genefavorite_set.all|active|dictsortreversed:'last_date_saved'|slice:'5:' %}
+                                    {% for gflv in genefaves_sorted|slice:'5:' %}
                                     <li class="menu-item">
                                         <form action="{% url 'worksheet_create_with_genes' %}">
                                             {% csrf_token %}
@@ -249,21 +252,22 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene & miRNA Favorites ( {{ user.genefavorite_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene & miRNA Favorites ( {{ genefaves_count }} )</a></li>
                     <li class="menu-item"><a href="{% url 'gene_fav_create' %}">Create Gene & miRNA Favorites</a></li>
                     <li class="menu-item"><a href="{% url 'gene_select_for_new_workbook' %}">Select Genes & miRNAs for a New Workbook</a></li>
                 </ul>
+                {% endwith %}
             </li>
             <li class="menu-item has-drop-down">
                 <a>VARIABLES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
                     <!--Temporary code to showcase recent variables items-->
-                    {% with user.variablefavorite_set.all as user_var_faves %}
-                        {% if user_var_faves|active|length > 0 %}
+                    {% with user_var_faves_av2_sorted=user.variablefavorite_set.all|active_and_v2|dictsortreversed:'last_date_saved' %}
+                        {% if varfaves_count > 0 %}
                         <li class="menu-item">
                             <strong>Start New Workbook With ...</strong>
                             <ul class="item-list">
-                                {% for vflv in user_var_faves|active_and_v2|dictsortreversed:'last_date_saved'|slice:':5' %}
+                                {% for vflv in user_var_faves_av2_sorted|slice:':5' %}
                                     <li class="menu-item">
                                         <form action="{% url 'worksheet_create_with_variables' %}" method="POST">
                                             {% csrf_token %}
@@ -272,10 +276,10 @@
                                         </form>
                                     </li>
                                 {% endfor %}
-                                {% if user_var_faves|active_and_v2|length > 5 %}
+                                {% if user_var_faves_av2_sorted|count > 5 %}
                                 <li class="menu-item has-drop-down__more"> More
                                     <ul class="drop">
-                                        {% for vflv in user_var_faves|active_and_v2|dictsortreversed:'last_date_saved'|slice:'5:' %}
+                                        {% for vflv in user_var_faves_av2_sorted|slice:'5:' %}
                                             <li class="menu-item">
                                                 <form action="{% url 'worksheet_create_with_variables' %}" method="POST">
                                                     {% csrf_token %}
@@ -291,48 +295,47 @@
                         </li>
                         {% endif %}
                     {% endwith %}
-                    <li class="menu-item"><a href="{% url 'variables' %}">Manage Favorite Variable(s) Lists ( {{ user.variablefavorite_set.all|active|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'variables' %}">Manage Favorite Variable(s) Lists ( {{ user.variablefavorite_set.all|active|count }} )</a></li>
                     <li class="menu-item"><a href="{% url 'variable_fav_create' %}">Create Favorite Variable(s) List</a></li>
                     <li class="menu-item"><a href="{% url 'variable_select_for_new_workbook' %}">Select Variables for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
                 <a>COHORTS <i class="fa fa-caret-down"></i></a>
+                {% with cohorts_this_user=user|get_cohorts_this_user cohort_user_count=user|get_cohorts_this_user|count %}
                 <ul class="sub-menu drop">
-                    {% if user|get_cohorts_this_user|length > 0 %}
+                    {% if cohort_user_count > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
                         <ul class="item-list">
-                            {% with user|get_cohorts_this_user as cohorts_this_user %}
-                                {% for clv in cohorts_this_user|slice:':5' %}
-                                <li class="menu-item">
-                                    <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="cohort_id" value="{{ clv.id}}">
-                                        <button type="submit" title="{{ clv.name|wrap_text }}">{{ clv.name }}</button>
-                                    </form>
-                                </li>
-                                {% endfor %}
-                                {% if cohorts_this_user|length > 5 %}
-                                <li class="menu-item has-drop-down__more"> More
-                                    <ul class="drop">
-                                        {% for clv in cohorts_this_user|slice:'5:' %}
-                                        <li class="menu-item">
-                                            <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
-                                                {% csrf_token %}
-                                                <input type="hidden" name="cohort_id" value="{{ clv.id}}">
-                                                <button type="submit" title="{{ clv.name|wrap_text }}">{{ clv.name }}</button>
-                                            </form>
-                                        </li>
-                                        {% endfor %}
-                                    </ul>
-                                </li>
-                                {% endif %}
-                            {% endwith %}
+                            {% for clv in cohorts_this_user|slice:':5' %}
+                            <li class="menu-item">
+                                <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="cohort_id" value="{{ clv.id}}">
+                                    <button type="submit" title="{{ clv.name|wrap_text }}">{{ clv.name }}</button>
+                                </form>
+                            </li>
+                            {% endfor %}
+                            {% if cohort_user_count > 5 %}
+                            <li class="menu-item has-drop-down__more"> More
+                                <ul class="drop">
+                                    {% for clv in cohorts_this_user|slice:'5:' %}
+                                    <li class="menu-item">
+                                        <form action="{% url 'worksheet_create_with_cohort' %}" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="cohort_id" value="{{ clv.id}}">
+                                            <button type="submit" title="{{ clv.name|wrap_text }}">{{ clv.name }}</button>
+                                        </form>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            {% endif %}
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Manage Saved Cohorts ( {{ user.cohort_perms_set.all|active:'cohort'|cohort_owner_permission|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'cohort_list' %}">Manage Saved Cohorts ( {{ user.cohort_perms_set.all|active:'cohort'|cohort_owner_permission|count }} )</a></li>
                     <li class="menu-item"><a href="{% url 'public_cohort_list' %}">Public Cohorts ( {% public_cohort_count %} )</a></li>
                     <li class="menu-item has-drop-down__more"> Create a New Cohort
                         <ul class="drop">
@@ -342,6 +345,7 @@
                     </li>
                     <li class="menu-item"><a href="{% url 'cohort_select_for_new_workbook' %}">Select Cohort for a New Workbook</a></li>
                 </ul>
+                {% endwith %}
             </li>
         </ul>
     </nav>
