-> #2109: added caMicroscope option to View Files page -> Attempt at #1692

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -439,6 +439,8 @@
                 width: 90px
             td:last-child i
                 color: $isb-success
+    input
+        margin-left: 5px
 
 .parsets-tooltip
     background-color: rgba($tooltip-color, 0.8)
@@ -511,3 +513,8 @@
 span.code
     font-family: monospace
     font-weight: 600
+
+#camic-div
+    iframe
+        min-height: 900px
+        margin-top: 10px
