-> Only one iframe will load at a time, with a side-listing tab interface -> Fixed regex for new path...again

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -514,7 +514,10 @@ span.code
     font-family: monospace
     font-weight: 600
 
-#camic-div
+#camic
+    .camic-tabs
+        li:not(:last-child)
+            margin-bottom: 10px
     iframe
         min-height: 900px
         margin-top: 10px
